--- a/docs/docs/contributor/local-setup/yarn-setup.mdx
+++ b/docs/docs/contributor/local-setup/yarn-setup.mdx
@@ -203,3 +203,13 @@ yarn start
 
 Twenty's frontend will be running at [http://localhost:3001](http://localhost:3001). Just login using the seeded demo account: `tim@apple.dev` to start using Twenty.
 
+# Troubleshouting
+
+## Error: Failed to execute init.sql script.
+
+```bash
+cp: ./infra/dev/postgres/init.sql: No such file or directory
+psql: error: /tmp/init.sql: No such file or directory
+```
+
+If you get this error it means you are not launching the local database init script from the repo's root folder. Make sure you're in `twenty/` and not in `twenty/infra/dev/scripts`.
